--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
+
     <title>ng-messenger</title>
     <style type="text/css">
       .container-demo {
@@ -62,6 +63,10 @@
     <div class="container-fluid container-demo fill">
       <ngm-demo-app>Loading demo...</ngm-demo-app>
     </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="//cdn.rawgit.com/imsky/holder/master/holder.js"></script>
     <script src="demo.js" async></script>
