--- a/demo/index.html
+++ b/demo/index.html
@@ -67,7 +67,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <script src="https://cdn.rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
     <script src="//cdn.rawgit.com/imsky/holder/master/holder.js"></script>
     <script src="demo.js" async></script>
 
